--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 body{
   font-family: 'Roboto', sans-serif;
+  color: #808080;
 }
 
 .clearfix::after {
@@ -21,12 +22,11 @@ body{
 }
 
 .wt-50{
-   width: 50%;
+  width: 50%;
 }
 
 .gray{
   background-color:#D3D3D3 ;
-  width: 100%;
 }
 
 .line{
@@ -47,7 +47,6 @@ header{
 }
 
 .header-container{
-  width: 100%;
   height: 100%;
   min-width: 1400px;
   padding: 0 10%;
@@ -137,103 +136,110 @@ header{
   margin-bottom: 25px;
 }
 
+.etichetta{
+  position: fixed;
+  top: 96%;
+  right: 10%;
+  z-index: 4;
+  text-align: right;
+}
+
+.etichetta a{
+  text-decoration: none;
+  color: white;
+  background-color: #7CBB04;
+  border-radius: 7px;
+  padding: 22px;
+  display: inline-block;
+  
+}
+
+.etichetta:hover {
+  top:94%
+}
+
 /* MAIN */
 
 /* prima parte */
-.first{
-  margin: auto;
-  height: 140px;
-  margin-bottom: 40px;
-}
 
-.first .school{
+main section p{
+  font-size: 120%;
+}
+main .first{
+  height: 150px;
+  margin-bottom: 50px;
   text-align: center;
   padding-top: 40px;
   line-height: 30px;
 }
 
-.school p{
-  font-size: 110%;
-  color: #808080;
-}
-.school p strong{
+.school  strong{
   font-size: 140%;
   color: black;
 }
 
+/* seconda parte */
+
 main .second{
   width: 100%;
   text-align: center;
-
- 
-}
-
-.second .container{
   padding: 0 10%;
   margin: auto;
- 
 }
 
-.part-left{
+.part-left,.part-center,.part-right{
   width: 30%;
 }
 
 .part-center{
-  width: 30%;
   margin: 0 2%;
 }
 
-.part-right{
-  width: 30%;
-}
-
-.second img{
+.container img{
   height: 200px;
   margin-bottom: 20px;
 }
 
-.container p{
+.container .title{
+  height: 350px;
   font-size: 170%;
   color: #9ACB3C;
 }
 
 .text p{
   margin-top: 30px;
-  font-size: 100%;
-  color: #808080;
   line-height: 30px;
 }
-.prima-sezione,.seconda-sezione,.terza-sezione{
-  height: 350px;
-}
+
+/* terza parte */
 
 .third{
   padding: 0 8%;
   margin: 30px auto;
   position: relative;
-  height: 100%;
   border-top: 1px solid lightgray;
   padding-top: 40px;
   width: 95%;
 }
+
 .third .mountain img{
   width: 85%;
 }
-.text-level{
+
+.level .text-level{
   position: absolute;
   top: 10%;
   width: 30%;
   min-width: 565px;
 }
-.level  h3{
+
+.text-level  h3{
   font-size: 250%;
   color: black;
   line-height: 40px;
 }
 
 .level p{
-  color: #888888 ;
-  font-size: 120%;
   padding: 10px 0;
 }
 
@@ -245,9 +251,7 @@ main .second{
 /* FOOTER */
 
 .container-footer{
-  height: 170px;
-  line-height: 170px;
-  
+  line-height: 150px;
 }
 
 .contenuti{
@@ -255,48 +259,43 @@ main .second{
   margin: auto;
 }
 
+/* parte sinistra del footer */
 .text-footer{
-
   width: 60%;
 }
 .text-footer h2{
   font-size: 190%;
+  color: black;
 }
 
+/* parte centrale del footer */
 .section-footer{
-  display: inline;
-  width: 20%;
+  font-size: 100%;
+  font-weight: 600;
 }
 
-
-
-.plane-footer{
-  width: 20%;
-  text-align: right;
-  float:right;
-}
-.plane-footer a{
-  font-size: 90%;
-
-}.seleziona{
-  display: inline;
-  font-size: 1.2em;
-}
-.sono{
-  display: inline;
-}
 .section-footer .sono{
   padding-right: 30px;
-  color: #848484 ;
 }
 
 .seleziona{
   border-bottom: 1px solid #848484;
-  font-size: 100%;
-  color: #848484 ;
+  font-weight: 400;
+}
 
+.seleziona,.sono{
+  display: inline;
 }
 
 .seleziona i{
   padding-left: 95px;
+}
+
+/* parte destra del footer */
+.plane-footer{
+  float:right;
+}
+
+.plane-footer a{
+  font-size: 90%;
 }
